# price-intelligence

./: Makefile  README.md  SUBMISSION.md  pyproject.toml  requirements-lock.txt  requirements.txt
notebooks/: results.ipynb
reports/: calibration.json  eda.md  results_summary.md  shap_global.json  tier1_backtest.json  tier2_backtest.json
src/: calibration.py  config.py  data_io.py  eda.py  eda2.py  features.py  infer.py  metrics.py  model_entity.py  model_global.py  results_summary.py  score.py  validation.py
