[project]
name = "mrscraper-price-intelligence"
version = "0.1.0"
description = "Price reconstruction on outage days using historical data + 100-sample anchor calibration (MrScraper take-home)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "catboost>=1.2",
    "lightgbm>=4.3",
    "matplotlib>=3.8",
    "shap>=0.45",
    "gdown>=5.1",
    "tabulate>=0.10",
    "tqdm>=4.66",
]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
